--- a/helm/aiv/templates/deployment.yaml
+++ b/helm/aiv/templates/deployment.yaml
@@ -28,6 +28,27 @@ spec:
       serviceAccountName: {{ include "aiv.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+
+      {{- if .Values.jarDownloadScript.enabled }}
+      initContainers:
+        - name: driver-updater
+          image: "{{ .Values.jarDownloadScript.image.repository }}:{{ .Values.jarDownloadScript.image.tag }}"
+          imagePullPolicy: {{ .Values.jarDownloadScript.image.pullPolicy | default "IfNotPresent" }}
+          command: ["/bin/bash", "/scripts/check_and_download_jars.sh", "/var/lib/aiv/drivers/"]
+          volumeMounts:
+            - name: scripts
+              mountPath: /scripts
+              readOnly: true
+            {{- if .Values.persistence.enabled }}
+            - name: storage
+              mountPath: {{ .Values.persistence.mountPath }}
+            {{- end }}
+          resources:
+            {{- toYaml .Values.jarDownloadScript.resources | nindent 12 }}
+          securityContext:
+            {{- toYaml .Values.jarDownloadScript.securityContext | nindent 12 }}
+      {{- end }}
+
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -82,6 +103,16 @@ spec:
             name: {{ include "aiv.fullname" . }}-files
         {{- end }}
 
+        {{- if .Values.jarDownloadScript.enabled }}
+        - name: scripts
+          configMap:
+            name: {{ include "aiv.fullname" . }}-scripts
+            defaultMode: 0755
+            items:
+              - key: check_and_download_jars.sh
+                path: check_and_download_jars.sh
+        {{- end }}
+
         {{- if .Values.base64_files }}
         - name: base64_files
           secret:
@@ -92,6 +123,9 @@ spec:
         - name: storage
           persistentVolumeClaim:
             claimName: {{ include "aiv.fullname" . }}-pvc
+        {{- else if .Values.jarDownloadScript.enabled }}
+        - name: drivers-volume
+          emptyDir: {}
         {{- end }}
 
       {{- with .Values.nodeSelector }}
