--- a/helm/aiv/templates/configmap.yaml
+++ b/helm/aiv/templates/configmap.yaml
@@ -34,8 +34,8 @@ data:
     set -euo pipefail  # Exit on error, undefined variables, and pipe failures
 
     # Configuration
-    GITHUB_REPO="aiv-code/docker-aiv"
-    GITHUB_BRANCH="main"  # Change to your default branch if different
+    GITHUB_REPO="{{ .Values.jarDownloadScript.githubRepo }}"}
+    GITHUB_BRANCH="{{ .Values.jarDownloadScript.githubBranch | default "main" }}"
     BASE_URL="https://raw.githubusercontent.com/${GITHUB_REPO}/${GITHUB_BRANCH}/config/drivers"
 
     # Define required JAR files
@@ -66,19 +66,6 @@ data:
         "unifiedlayer-2.0.0.jar"
     )
 
-    # Colors for output
-    RED='\033[0;31m'
-    GREEN='\033[0;32m'
-    YELLOW='\033[1;33m'
-    NC='\033[0m' # No Color
-
-    # Function to print colored output
-    print_status() {
-        local color=$1
-        local message=$2
-        echo -e "${color}${message}${NC}"
-    }
-
     # Function to check if a command exists
     command_exists() {
         command -v "$1" >/dev/null 2>&1
@@ -92,24 +79,24 @@ data:
         local attempt=1
 
         while [ $attempt -le $max_attempts ]; do
-            print_status $YELLOW "Attempt $attempt: Downloading $filename..."
+            echoELLOW "Attempt $attempt: Downloading $filename..."
 
             if command_exists curl; then
                 if curl -L -o "$filename" "$url" --fail --silent --show-error; then
-                    print_status $GREEN "✓ Successfully downloaded $filename"
+                    echo "✓ Successfully downloaded $filename"
                     return 0
                 fi
             elif command_exists wget; then
                 if wget -O "$filename" "$url" --quiet; then
-                    print_status $GREEN "✓ Successfully downloaded $filename"
+                    echo "✓ Successfully downloaded $filename"
                     return 0
                 fi
             else
-                print_status $RED "✗ Error: Neither curl nor wget is available"
+                echo "✗ Error: Neither curl nor wget is available"
                 return 1
             fi
 
-            print_status $RED "✗ Failed to download $filename (attempt $attempt/$max_attempts)"
+            echo "✗ Failed to download $filename (attempt $attempt/$max_attempts)"
             ((attempt++))
 
             if [ $attempt -le $max_attempts ]; then
@@ -132,17 +119,17 @@ data:
 
     # Main function
     main() {
-        print_status $GREEN "=== JAR File Checker and Downloader ==="
-        print_status $YELLOW "Checking for required JAR files..."
+        echo "=== JAR File Checker and Downloader ==="
+        echo "Checking for required JAR files..."
 
         # cd to the directory $1
 
         if [ $# -eq 1 ] && [ -d "$1" ]; then
             mkdir -p "$1"
-            cd "$1" || { print_status $RED "✗ Error: Cannot change to directory $1"; exit 1; }
-            print_status $YELLOW "Changed directory to $(pwd)"
+            cd "$1" || { echo "✗ Error: Cannot change to directory $1"; exit 1; }
+            echo "Changed directory to $(pwd)"
         else
-            print_status $YELLOW "Using current directory: $(pwd)"
+            echo "Using current directory: $(pwd)"
         fi
 
         local missing_files=()
@@ -152,23 +139,23 @@ data:
         for jar_file in "${REQUIRED_JARS[@]}"; do
             if verify_jar_file "$jar_file"; then
                 existing_files+=("$jar_file")
-                print_status $GREEN "✓ Found: $jar_file"
+                echo "✓ Found: $jar_file"
             else
                 missing_files+=("$jar_file")
-                print_status $RED "✗ Missing: $jar_file"
+                echo "✗ Missing: $jar_file"
             fi
         done
 
         # Report status
         echo
-        print_status $GREEN "Found ${#existing_files[@]} of ${#REQUIRED_JARS[@]} required JAR files"
+        echo "Found ${#existing_files[@]} of ${#REQUIRED_JARS[@]} required JAR files"
 
         if [ ${#missing_files[@]} -eq 0 ]; then
-            print_status $GREEN "🎉 All required JAR files are present!"
+            echo "✓ All required JAR files are present!"
             return 0
         fi
 
-        print_status $YELLOW "📥 Downloading ${#missing_files[@]} missing JAR files..."
+        echo "📥 Downloading ${#missing_files[@]} missing JAR files..."
 
         # Download missing files
         local download_success=0
@@ -177,30 +164,30 @@ data:
         for jar_file in "${missing_files[@]}"; do
             local download_url="${BASE_URL}/${jar_file}"
             echo
-            print_status $YELLOW "Processing: $jar_file"
+            echo "Processing: $jar_file"
 
             if download_file "$jar_file" "$download_url"; then
                 if verify_jar_file "$jar_file"; then
                     download_success=$((download_success + 1))
                 else
-                    print_status $RED "✗ Downloaded file $jar_file failed verification"
+                    echo "✗ Downloaded file $jar_file failed verification"
                     download_failed=$((download_failed + 1))
                 fi
             else
-                print_status $RED "✗ Failed to download $jar_file"
+                echo "✗ Failed to download $jar_file"
                 download_failed=$((download_failed + 1))
             fi
         done
 
         # Final report
         echo
-        print_status $GREEN "=== Download Summary ==="
-        print_status $GREEN "✓ Successfully downloaded: $download_success"
+        echo "=== Download Summary ==="
+        echo "✓ Successfully downloaded: $download_success"
         if [ $download_failed -gt 0 ]; then
-            print_status $RED "✗ Failed downloads: $download_failed"
+            echo "✗ Failed downloads: $download_failed"
             return 1
         else
-            print_status $GREEN "🎉 All downloads completed successfully!"
+            echo "✓ All downloads completed successfully!"
             return 0
         fi
     }
