--- a/helm/aiv/values.yaml
+++ b/helm/aiv/values.yaml
@@ -66,7 +66,7 @@ files:
 base64_files: {}
 
 # Driver uploader configuration
-driver_uploader:
+driver_updater:
   enabled: true
   githubRepo: "aiv-code/docker-aiv"
   githubBranch: "feat/helm"
