debian: Add repository/Default

--- a/.github/workflows/build-deb-package.yml
+++ b/.github/workflows/build-deb-package.yml
@@ -23,7 +23,7 @@ jobs:
       env:
         TAG: ${{ github.ref_name }}
       run: |
-        VERSION=$(echo $TAG | sed 's/debian\///')
+        export VERSION=$(echo $TAG | sed 's/debian\///')
         echo "Building Debian package for version $VERSION"
         # Run in docker container for debian:12 to ensure a clean environment
         docker run --rm -e "VERSION=$VERSION" \
