--- a/helm/aiv/templates/configmap.yaml
+++ b/helm/aiv/templates/configmap.yaml
@@ -124,7 +124,7 @@ data:
 
         # cd to the directory $1
 
-        if [ $# -eq 1 ] && [ -d "$1" ]; then
+        if [ $# -eq 1 ]; then
             mkdir -p "$1"
             cd "$1" || { echo "✗ Error: Cannot change to directory $1"; exit 1; }
             echo "Changed directory to $(pwd)"
