--- a/.github/workflows/debian-release.yml
+++ b/.github/workflows/debian-release.yml
@@ -48,5 +48,6 @@ jobs:
       uses: softprops/action-gh-release@v2
       if: github.ref_type == 'tag'
       with:
+        token: ${{ secrets.GITHUB_TOKEN }}
         files: |
           aiv*.deb
