--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -61,10 +61,13 @@ jobs:
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           path: helm-repo
 
   # Deploy job
