--- a/.github/workflows/debian-release.yml
+++ b/.github/workflows/debian-release.yml
@@ -5,7 +5,7 @@ on:
     tags: [ 'debian/*' ]
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
   packages: write
