--- a/.github/workflows/debian-release.yml
+++ b/.github/workflows/debian-release.yml
@@ -1,11 +1,14 @@
-name: Build Debian Package
+name: Release Debian package
 
 on:
   push:
-    tags: [ 'debian/*' ]
+    branches:
+      - main
+    paths:
+      - "debian/changelog"
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
   packages: write
@@ -17,26 +20,26 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Get run.jar from Docker image
-      if: startsWith(github.ref, 'refs/tags/debian/')
-      env:
-        TAG: ${{ github.ref_name }}
+    - name: Parse Version from debian/changelog
+      id: parse_version
       run: |
-        export VERSION=$(echo $TAG | sed 's/debian\///')
+        # Extract the latest version from the changelog
+        VERSION=$(awk '/^aiv / {gsub(/[()]/, "", $2); print $2; exit}' debian/changelog)
+        echo "Latest version found in changelog: $VERSION"
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
+
+    - name: Get run.jar from Docker image
+      run: |
         export IMAGE_VERSION=${VERSION%%-*}
+        echo "Using image version: $IMAGE_VERSION"
         docker pull jits023/aiv:${IMAGE_VERSION}
         docker create --name aiv_container jits023/aiv:${IMAGE_VERSION}
         docker cp aiv_container:/opt/run.jar aiv.jar
         docker rm -f aiv_container
 
-    - name: Build debian package
-      if: startsWith(github.ref, 'refs/tags/debian/')
-      env:
-        TAG: ${{ github.ref_name }}
+    - name: Build Debian package
       run: |
-        export VERSION=$(echo $TAG | sed 's/debian\///')
         echo "Building Debian package for version $VERSION"
-        # Run in docker container for debian:12 to ensure a clean environment
         docker run --rm -e "VERSION=$VERSION" \
           -v $PWD:/workspace \
           -w /workspace \
@@ -44,10 +47,26 @@ jobs:
           bash -c "apt-get update && apt-get install -y debhelper && \
                    DEBUG=1 bash aiv-build-deb.sh"
 
+    - name: Create and Push Tag
+      env:
+        VERSION: ${{ env.VERSION }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        # Check if the tag exists remotely
+        if git ls-remote --tags origin | grep -q "refs/tags/debian/$VERSION$"; then
+          echo "Tag debian/$VERSION already exists. Skipping tag creation."
+        else
+          # Create and push the debian tag
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag debian/$VERSION
+          git push origin debian/$VERSION
+        fi
+
     - name: Release
       uses: softprops/action-gh-release@v2
-      if: github.ref_type == 'tag'
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
+        tag_name: debian/${{ env.VERSION }}
         files: |
           aiv*.deb
