--- a/repository/econfig/application.yml
+++ b/repository/econfig/application.yml
@@ -17,12 +17,12 @@ spring:
       WRITE_DATES_AS_TIMESTAMPS: false
     time-zone: UTC
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres # database for aiv schema
+    url: jdbc:postgresql://db:5432/postgres # database for aiv schema
     username: postgres
     password: postgres
     driverClassName: org.postgresql.Driver
   datasource1:
-    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=security # database for security schema
+    url: jdbc:postgresql://db:5432/postgres?currentSchema=security # database for security schema
     username: postgres
     password: postgres
     driverClassName: org.postgresql.Driver
@@ -52,7 +52,7 @@ spring:
 
 #For JNDI Datasources
 datasources:
-  dslist[0]: '{"jndi-name":"jdbc/ActiveIDB","driver-class-name":"org.postgresql.Driver","url":"jdbc:postgresql://localhost:5432/postgres","username":"postgres","password":"postgres"}'
+  dslist[0]: '{"jndi-name":"jdbc/ActiveIDB","driver-class-name":"org.postgresql.Driver","url":"jdbc:postgresql://db:5432/postgres","username":"postgres","password":"postgres"}'
 
 #Application some default values
 # slatKey -> For stoken decryption SecretKey
